--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#footer">Contacto</a>
+              <a class="nav-link" href="#contact">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#pricing">Proyectos</a>
+              <a class="nav-link" href="#projects">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#cta">Sobre mi</a>
+              <a class="nav-link" href="#about">Sobre mi</a>
             </li>
           </ul>
         </div>
@@ -61,30 +61,10 @@
   </div>
 
   <!-- Projects -->
-  <section id="projectSection" class="white-section">
-    <h2 class="project-title" >Proyectos</h2>
-    <div class="container-fuid project-row">
+  <section id="project" class="white-section">
+    <h2 class="big-title" >Proyectos</h2>
+    <div class="container-fuid">
       <div class="row project-row">
-        <div class="project-col col-lg-4 col-md-6">
-          <div class="card h-100 mb-4 rounded-3 shadow-sm project-card">
-            <img src="Images/building1.jfif" class="card-img-top project-picture" alt="building-image">
-            <div class="card-body d-flex flex-column project-body">
-              <h3 class="card-title project-card-title">Título de Proyecto</h3>
-              <p class="card-text project-text">Pequeña descripción sobre el proyecto, qué, para quien, etc...</p>
-              <a href="#" class="btn w-100 mt-auto btn-light project-button">Saber más</a>
-            </div>
-          </div>
-        </div>
-        <div class="project-col col-lg-4 col-md-6">
-          <div class="card h-100 mb-4 rounded-3 shadow-sm project-card">
-            <img src="Images/building1.jfif" class="card-img-top project-picture" alt="building-image">
-            <div class="card-body d-flex flex-column project-body">
-              <h3 class="card-title project-card-title">Título de Proyecto</h3>
-              <p class="card-text project-text">Pequeña descripción sobre el proyecto, qué, para quien, etc...</p>
-              <a href="#" class="btn w-100 mt-auto btn-light project-button">Saber más</a>
-            </div>
-          </div>
-        </div>
         <div class="project-col col-lg-4 col-md-6">
           <div class="card h-100 mb-4 rounded-3 shadow-sm project-card">
             <img src="Images/building1.jfif" class="card-img-top project-picture" alt="building-image">
@@ -98,7 +78,7 @@
 
         <div class="project-col col-lg-4 col-md-6">
           <div class="card h-100 mb-4 rounded-3 shadow-sm project-card">
-            <img src="Images/building1.jfif" class="card-img-top project-picture" alt="building-image">
+            <img src="Images/building2.jfif" class="card-img-top project-picture" alt="building-image">
             <div class="card-body d-flex flex-column project-body">
               <h3 class="card-title project-card-title">Título de Proyecto</h3>
               <p class="card-text project-text">Pequeña descripción sobre el proyecto, qué, para quien, etc...</p>
@@ -106,9 +86,10 @@
             </div>
           </div>
         </div>
+
         <div class="project-col col-lg-4 col-md-6">
           <div class="card h-100 mb-4 rounded-3 shadow-sm project-card">
-            <img src="Images/building1.jfif" class="card-img-top project-picture" alt="building-image">
+            <img src="Images/building3.jfif" class="card-img-top project-picture" alt="building-image">
             <div class="card-body d-flex flex-column project-body">
               <h3 class="card-title project-card-title">Título de Proyecto</h3>
               <p class="card-text project-text">Pequeña descripción sobre el proyecto, qué, para quien, etc...</p>
@@ -116,9 +97,65 @@
             </div>
           </div>
         </div>
+
         <div class="project-col col-lg-4 col-md-6">
           <div class="card h-100 mb-4 rounded-3 shadow-sm project-card">
-            <img src="Images/building1.jfif" class="card-img-top project-picture" alt="building-image">
+            <img src="Images/building4.jfif" class="card-img-top project-picture" alt="building-image">
+            <div class="card-body d-flex flex-column project-body">
+              <h3 class="card-title project-card-title">Título de Proyecto</h3>
+              <p class="card-text project-text">Pequeña descripción sobre el proyecto, qué, para quien, etc...</p>
+              <a href="#" class="btn w-100 mt-auto btn-light project-button">Saber más</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-col col-lg-4 col-md-6">
+          <div class="card h-100 mb-4 rounded-3 shadow-sm project-card">
+            <img src="Images/building5.jfif" class="card-img-top project-picture" alt="building-image">
+            <div class="card-body d-flex flex-column project-body">
+              <h3 class="card-title project-card-title">Título de Proyecto</h3>
+              <p class="card-text project-text">Pequeña descripción sobre el proyecto, qué, para quien, etc...</p>
+              <a href="#" class="btn w-100 mt-auto btn-light project-button">Saber más</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-col col-lg-4 col-md-6">
+          <div class="card h-100 mb-4 rounded-3 shadow-sm project-card">
+            <img src="Images/building6.jfif" class="card-img-top project-picture" alt="building-image">
+            <div class="card-body d-flex flex-column project-body">
+              <h3 class="card-title project-card-title">Título de Proyecto</h3>
+              <p class="card-text project-text">Pequeña descripción sobre el proyecto, qué, para quien, etc...</p>
+              <a href="#" class="btn w-100 mt-auto btn-light project-button">Saber más</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-col col-lg-4 col-md-6">
+          <div class="card h-100 mb-4 rounded-3 shadow-sm project-card">
+            <img src="Images/building7.jfif" class="card-img-top project-picture" alt="building-image">
+            <div class="card-body d-flex flex-column project-body">
+              <h3 class="card-title project-card-title">Título de Proyecto</h3>
+              <p class="card-text project-text">Pequeña descripción sobre el proyecto, qué, para quien, etc...</p>
+              <a href="#" class="btn w-100 mt-auto btn-light project-button">Saber más</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-col col-lg-4 col-md-6">
+          <div class="card h-100 mb-4 rounded-3 shadow-sm project-card">
+            <img src="Images/building9.jfif" class="card-img-top project-picture" alt="building-image">
+            <div class="card-body d-flex flex-column project-body">
+              <h3 class="card-title project-card-title">Título de Proyecto</h3>
+              <p class="card-text project-text">Pequeña descripción sobre el proyecto, qué, para quien, etc...</p>
+              <a href="#" class="btn w-100 mt-auto btn-light project-button">Saber más</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-col col-lg-4 col-md-6">
+          <div class="card h-100 mb-4 rounded-3 shadow-sm project-card">
+            <img src="Images/building10.jfif" class="card-img-top project-picture" alt="building-image">
             <div class="card-body d-flex flex-column project-body">
               <h3 class="card-title project-card-title">Título de Proyecto</h3>
               <p class="card-text project-text">Pequeña descripción sobre el proyecto, qué, para quien, etc...</p>
@@ -138,5 +175,26 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+<section id=about class="green-section" >
+  <h2 class="big-title" >Sobre Mi</h2>
+  <div class="container-fuid">
+    <div class="row project-row">
+      <div class="col project-col col-lg-6">
+        <img src="Images/person1.jfif" class="about-image"alt="Architect image">
+      </div>
+      <div class="col project-col col-lg-6">
+        <h3 class="med-title">Una Historia Sobre Sueños </br> Y Planos</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies leo integer malesuada nunc. Phasellus faucibus scelerisque eleifend donec. Dignissim diam quis enim lobortis scelerisque. Nunc congue nisi vitae suscipit tellus mauris. Vitae proin sagittis nisl rhoncus mattis rhoncus urna. Tempus iaculis urna id volutpat lacus laoreet non. Sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula. Velit euismod in pellentesque massa placerat duis ultricies. Non curabitur gravida arcu ac tortor. Mauris sit amet massa vitae tortor. Tellus orci ac auctor augue mauris augue neque gravida. Hac habitasse platea dictumst vestibulum rhoncus est. Ultrices vitae auctor eu augue ut. Platea dictumst quisque sagittis purus sit amet volutpat. Sed arcu non odio euismod. Et malesuada fames ac turpis egestas sed. Pulvinar mattis nunc sed blandit.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- Green to white division -->
+<div class="division">
+  <img src="Images/green-white.png" alt="" class="division-img">
+</div>
+
 
 </html>
