--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#contact">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Proyectos</a>
+              <a class="nav-link" href="#project">Proyectos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">Sobre mi</a>
@@ -175,7 +175,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-<section id=about class="green-section" >
+<section id="about" class="green-section" >
   <h2 class="big-title" >Sobre Mi</h2>
   <div class="container-fuid">
     <div class="row project-row">
